# jit_and_aot

./: CMakeLists.txt  LICENSE  README.MD
irGen/: .clang-format  CMakeLists.txt  README.MD
irGen/include/: BB.hpp  IRBuilder.hpp  function.hpp  graph.hpp  instr.hpp  instrDef.hpp  instrTypes.hpp  liveRange.hpp  livenessAnalysis.hpp  loop.hpp  loopAnalyzer.hpp  opcodes.hpp
irGen/include/helpers/: defines.hpp  genEnum.hpp
irGen/include/passes/: constantFoldingPass.hpp  eliminateChecksPass.hpp  pass.hpp  peepholePass.hpp
irGen/src/: BB.cpp  CMakeLists.txt  IRBuilder.cpp  function.cpp  graph.cpp  instr.cpp  livenessAnalysis.cpp  loopAnalyzer.cpp  main.cpp
irGen/src/passes/: constantFoldingPass.cpp  eliminateChecksPass.cpp  peepholePass.cpp
irGen/tests/: CMakeLists.txt  constantFoldingPassTest.cpp  dominatorTree.cpp  eliminateCheckTest.cpp  livenessAnalysis.cpp  loopTest.cpp  peepholePassTest.cpp
